--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "start": "expo start --no-tunnel",
-    "dev": "EXPO_NO_TELEMETRY=1 expo start --no-tunnel",
-    "android": "EXPO_NO_TELEMETRY=1 expo start --android --no-tunnel",
-    "ios": "EXPO_NO_TELEMETRY=1 expo start --ios --no-tunnel",
+    "start": "EXPO_OFFLINE=1 EXPO_NO_DOTENV=1 expo start --offline --no-tunnel",
+    "dev": "EXPO_OFFLINE=1 EXPO_NO_DOTENV=1 EXPO_NO_TELEMETRY=1 expo start --offline --no-tunnel",
+    "android": "EXPO_OFFLINE=1 EXPO_NO_DOTENV=1 EXPO_NO_TELEMETRY=1 expo start --android --offline --no-tunnel",
+    "ios": "EXPO_OFFLINE=1 EXPO_NO_DOTENV=1 EXPO_NO_TELEMETRY=1 expo start --ios --offline --no-tunnel",
     "web": "EXPO_NO_TELEMETRY=1 expo start --web",
-    "start:clean": "expo start -c --no-tunnel",
+    "start:clean": "EXPO_OFFLINE=1 EXPO_NO_DOTENV=1 expo start -c --offline --no-tunnel",
     "doctor": "expo doctor",
     "build:web": "expo export -p web && npx workbox generateSW workbox-config.js",
     "build:android": "expo prebuild -p android",
