--- a/.eslintignore
+++ b/.eslintignore
@@ -13,3 +13,6 @@ node_modules/
 
 # Ignore example/template files
 supabase-edge-function-example.ts
+
+# Ignore Supabase Edge Functions (Deno runtime, different module resolution)
+supabase/functions/
