--- a/app.json
+++ b/app.json
@@ -1,4 +1,3 @@
-
 {
   "expo": {
     "name": "Safe Space",
@@ -48,5 +47,6 @@
     "extra": {
       "router": {}
     }
-  }
+  },
+  "scheme": "Safe Space"
 }
